--- a/package.json
+++ b/package.json
@@ -28,15 +28,25 @@
     "ember-cli-htmlbars-inline-precompile": "^0.3.1",
     "ember-cli-inject-live-reload": "^1.4.0",
     "ember-cli-jshint": "^1.0.0",
+    "ember-cli-materialize": "0.19.2",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
+    "ember-cli-sass": "git://github.com/mike-north/ember-cli-sass.git#8ceb57d41f5774e8ececb5d1f05454449c19000c",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
+    "ember-composability": "0.3.1",
     "ember-data": "^2.5.0",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-keyboard": "1.0.3",
     "ember-load-initializers": "^0.5.1",
+    "ember-material-design-icons-shim": "0.1.1",
+    "ember-materialize-shim": "0.1.1",
+    "ember-modal-dialog": "0.8.3",
+    "ember-new-computed": "1.0.3",
+    "ember-radio-button": "1.0.7",
     "ember-resolver": "^2.0.3",
+    "ember-truth-helpers": "1.2.0",
     "ember-try": "^0.2.2",
     "loader.js": "^4.0.1"
   },
