Accelerate tetris to working state: packages

--- a/bower.json
+++ b/bower.json
@@ -2,9 +2,11 @@
   "name": "ember-cli-tetris",
   "dependencies": {
     "ember": "~2.5.0",
-    "ember-cli-shims": "0.1.1",
+    "ember-cli-shims": "~0.1.1",
     "ember-cli-test-loader": "0.2.2",
     "ember-qunit-notifications": "0.1.0",
-    "materialize": "~0.97.0"
+    "materialize": "~0.97.0",
+    "pouchdb": "^3.5.0",
+    "relational-pouch": "^1.3.2"
   }
 }
