--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ember-cli-tetris",
   "version": "0.0.1",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "more blocks, more problems.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -32,23 +32,26 @@
     "ember-cli-materialize": "0.19.2",
     "ember-cli-qunit": "^1.4.0",
     "ember-cli-release": "0.2.8",
-    "ember-cli-sass": "git://github.com/mike-north/ember-cli-sass.git#8ceb57d41f5774e8ececb5d1f05454449c19000c",
+    "ember-cli-sass": "mike-north/ember-cli-sass#8ceb57d41f5774e8ececb5d1f05454449c19000c",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^1.2.0",
-    "ember-composability": "0.3.1",
+    "ember-composability": "^0.3.1",
+    "ember-composable-helpers": "0.23.1",
     "ember-data": "^2.5.0",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
     "ember-inline-svg": "0.1.5",
-    "ember-keyboard": "1.0.3",
+    "ember-keyboard": "1.1.0",
     "ember-load-initializers": "^0.5.1",
-    "ember-material-design-icons-shim": "0.1.1",
-    "ember-materialize-shim": "0.1.1",
-    "ember-modal-dialog": "0.8.3",
-    "ember-new-computed": "1.0.3",
-    "ember-radio-button": "1.0.7",
+    "ember-material-design-icons-shim": "^0.1.1",
+    "ember-materialize-shim": "^0.1.1",
+    "ember-math-helpers": "1.0.0",
+    "ember-modal-dialog": "^0.8.3",
+    "ember-new-computed": "^1.0.3",
+    "ember-pouch": "3.2.0",
+    "ember-radio-button": "^1.0.7",
     "ember-resolver": "^2.0.3",
-    "ember-truth-helpers": "1.2.0",
+    "ember-truth-helpers": "^1.2.0",
     "ember-try": "^0.2.2",
     "loader.js": "^4.0.1"
   },
@@ -57,9 +60,11 @@
   ],
   "dependencies": {
     "ember-cli-babel": "^5.1.6",
-    "ember-cli-htmlbars": "^1.0.3"
+    "ember-cli-htmlbars": "^1.0.3",
+    "ember-resize": "0.0.12"
   },
   "ember-addon": {
-    "configPath": "tests/dummy/config"
+    "configPath": "tests/dummy/config",
+    "demoURL": "http://ahab-io.github.io/ember-cli-tetris/"
   }
 }
