--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
     "ember-qunit-notifications": "0.1.0",
     "materialize": "~0.97.0",
     "pouchdb": "^3.5.0",
-    "relational-pouch": "^1.3.2"
+    "relational-pouch": "^1.3.2",
+    "hammer-time": "1.0.0"
   }
 }
