--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "ember-data": "^2.5.0",
     "ember-disable-prototype-extensions": "^1.1.0",
     "ember-export-application-global": "^1.0.5",
+    "ember-gestures": "0.4.1",
+    "ember-getowner-polyfill": "1.0.1",
+    "ember-hammertime": "1.0.3",
     "ember-inline-svg": "0.1.5",
     "ember-keyboard": "1.1.0",
     "ember-load-initializers": "^0.5.1",
